# nas-nav

./: .gitignore  README.md  app.py  database.py  go.mod  go.sum  main.go  pyproject.toml
cmd/initdb/: main.go
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/CategoryChips/: CategoryChips.tsx
frontend/src/components/SearchBar/: SearchBar.tsx
frontend/src/components/ServiceCard/: ServiceCard.tsx
frontend/src/pages/Admin/: Admin.tsx
frontend/src/pages/Admin/Dashboard/: CategoriesTab.tsx  Dashboard.tsx  ServicesTab.tsx
frontend/src/pages/Admin/Login/: Login.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/services/: api.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
models/: auth.go  category.go  service.go
nas-nav-go/: go.mod  main.go
nas-nav-go/db/: nav.db
nas-nav-go/static/css/: admin.css
nas-nav-go/static/html/: index.html
nas-nav-go/static/js/: admin.js  index.js
nas-nav-go/static/next/html/: index.html
nas-nav-go/static/next/js/: index.js
static/css/: admin.css  index.css
static/html/: admin.html  index.html
static/html/sub-pages/: card_container.html
static/js/: admin.js  index.js
static/next/css/: admin.css  index.css
static/next/html/: admin.html  index.html
static/next/js/: admin.js  index.js
