[project]
name = "nas-nav"
version = "0.0.1"
description = ""
authors = [
    {name = "GT610",email = "myddz1005@163.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-cors (>=5.0.0,<6.0.0)",
    "flask-httpauth (>=4.8.0,<5.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "marshmallow (>=3.26.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
